# intro-to-predicates

./: LICENSE  README.md  package.json  pnpm-lock.yaml
.github/workflows/: actions.yml
frontend/src/: App.tsx  main.tsx
frontend/src/components/: buildAndSign.tsx  create.tsx
frontend/src/multisig-predicate/factories/: PredicateAbi__factory.ts
multisig-predicate/: Cargo.toml  Forc.toml
multisig-predicate/src/: main.sw
multisig-predicate/tests/: harness.rs
predicate/: Cargo.toml
predicate-script-logging/: Cargo.toml  Forc.toml
predicate-script-logging/src/: main.sw
predicate-script-logging/tests/: harness.rs
predicate-template/: Forc.toml
predicate-template/src/: main.sw
predicate-test-example/: Forc.toml
predicate-test-example/src/: main.sw
predicate/src/: main.sw
predicate/tests/: harness.rs
script-test-example/: Cargo.toml  Forc.toml
script-test-example/src/: main.sw
script-test-example/tests/: harness.rs
