[package]
name = "predicate"
description = "A cargo-generate template for Rust + Sway integration testing."
version = "0.1.0"
edition = "2021"
authors = ["Call Delegation <106365423+calldelegation@users.noreply.github.com>"]
license = "Apache-2.0"

build = "build.rs"

[dev-dependencies]
fuels = { version = "0.66.5", features = ["fuel-core-lib"] }
fuel-core = { version = "0.36.0", default-features = false, features = [
  "wasm-executor",
] }
fuel-core-chain-config = { version = "0.36.0", default-features = false }
fuel-core-client = { version = "0.36.0", default-features = false }
fuel-core-poa = { version = "0.36.0", default-features = false }
fuel-core-services = { version = "0.36.0", default-features = false }
fuel-core-types = { version = "0.36.0", default-features = false }
tokio = { version = "1.12", features = ["rt", "macros"] }

[build-dependencies]
anyhow = { version = "1.0", features = ["std"] }
flate2 = { version = "1.0",  features = ["zlib"] }
fuels-accounts = { version = "0.66.5", features = ["std"] }
reqwest = { version = "0.12", features = ["blocking", "default-tls"] }
semver = "1.0.20"
tar = { version = "0.4", default-features = false }

[[test]]
harness = true
name = "integration_tests"
path = "tests/harness.rs"
